# swim_analytics

./: .gitignore  CMakeLists.txt
cpp/: CMakeLists.txt  swim.cpp
csv_output/: 22977219294_ACTIVITY.csv  23061527358_ACTIVITY.csv  23145327952_ACTIVITY.csv  23228371192_ACTIVITY.csv
data_fit/: 22977219294_ACTIVITY.fit  23061527358_ACTIVITY.fit  23145327952_ACTIVITY.fit  23228371192_ACTIVITY.fit
python/: analyze_stroke_rate.py  dashboard.py  swim_parser.py
